--- a/style.css
+++ b/style.css
@@ -1,46 +1,47 @@
 * {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
-    height: 650px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 1440px;
-    background-color: #E5E7EB;
+    height: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 1440px;
+  background-color: #e5e7eb;
 }
 
 #myForm {
-    width: 40%;
-    padding-top: 60px;
-    padding-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #374151;
-    border-radius: 5px;
+  width: 40%;
+  padding-top: 60px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #374151;
+  border-radius: 5px;
 }
 
 #myForm p {
-    background-color: #374151;
-    align-self: flex-start;
-    padding-left: 110px;
-    font-size: large;
-    color: #F3F4F6;
+  background-color: #374151;
+  align-self: flex-start;
+  padding-left: 110px;
+  font-size: large;
+  color: #f3f4f6;
 }
 
-#myForm input{
-    width: 60%;
-    margin-bottom: 30px;
+#myForm input {
+  width: 60%;
+  margin-bottom: 30px;
 }
 
 .btn {
-    margin-top: 15px;
-    margin-bottom: 20px;
-    width: 18%;
-    background-color: #F3F4F6;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  width: 18%;
+  background-color: #f3f4f6;
 }
